update hourly forecast

--- a/index.html
+++ b/index.html
@@ -33,62 +33,7 @@
                     <div class="daily_nav row gx-0 bg-white rounded-4 my-4"></div>
                 </div>
                 <div class="hourly">
-                    <div class="row">
-                        <div class="col-2">
-                            <div class="bg-white py-2 rounded-4 hourly_now">
-                                <p class="text-background py-2 m-0" style="font-size: 23px; text-align: center;">Now</p>
-                                <div class="d-flex justify-content-center">
-                                    <img src="icon/sun.png" alt="" width="60px">
-                                </div>
-                                <p class="text-background py-2 m-0 fw-bold" style="font-size: 22px; text-align: center;">25°</p>
-                            </div>
-                        </div>
-                        <div class="col-2">
-                            <div class="bg-white py-2 rounded-4 hourly_now+1">
-                                <p class="text-background py-2 m-0" style="font-size: 23px; text-align: center;">15:00</p>
-                                <div class="d-flex justify-content-center">
-                                    <img src="icon/atmosphere.png" alt="" width="60px">
-                                </div>
-                                <p class="text-background py-2 m-0 fw-bold" style="font-size: 22px; text-align: center;">25°</p>
-                            </div>
-                        </div>
-                        <div class="col-2">
-                            <div class="bg-white py-2 rounded-4 hourly_now+2">
-                                <p class="text-background py-2 m-0" style="font-size: 23px; text-align: center;">17:00</p>
-                                <div class="d-flex justify-content-center">
-                                    <img src="icon/cloud.png" alt="" width="60px">
-                                </div>
-                                <p class="text-background py-2 m-0 fw-bold" style="font-size: 22px; text-align: center;">25°</p>
-                            </div>
-                        </div>
-                        <div class="col-2">
-                            <div class="bg-white py-2 rounded-4 hourly_now+3">
-                                <p class="text-background py-2 m-0" style="font-size: 23px; text-align: center;">19:00</p>
-                                <div class="d-flex justify-content-center">
-                                    <img src="icon/drizzle.png" alt="" width="60px">
-                                </div>
-                                <p class="text-background py-2 m-0 fw-bold" style="font-size: 22px; text-align: center;">25°</p>
-                            </div>
-                        </div>
-                        <div class="col-2">
-                            <div class="bg-white py-2 rounded-4 hourly_now+4">
-                                <p class="text-background py-2 m-0" style="font-size: 23px; text-align: center;">21:00</p>
-                                <div class="d-flex justify-content-center">
-                                    <img src="icon/rain.png" alt="" width="60px">
-                                </div>
-                                <p class="text-background py-2 m-0 fw-bold" style="font-size: 22px; text-align: center;">25°</p>
-                            </div>
-                        </div>
-                        <div class="col-2">
-                            <div class="bg-white py-2 rounded-4 hourly_now+5">
-                                <p class="text-background py-2 m-0" style="font-size: 23px; text-align: center;">23:00</p>
-                                <div class="d-flex justify-content-center">
-                                    <img src="icon/snow.png" alt="" width="60px">
-                                </div>
-                                <p class="text-background py-2 m-0 fw-bold" style="font-size: 22px; text-align: center;">25°</p>
-                            </div>
-                        </div>
-                    </div>
+                    <div class="row hourly_nav"></div>
                 </div>
             </div>
             <div class="col-5 chart">
