update temperation chart

--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <title>Weather app</title>
     <link rel="stylesheet" href="lib/bootstrap.css">
     <link rel="stylesheet" href="style.css">
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+    </style>
 </head>
 
 <body>
 
     <div class="container-fluid h-100">
-        <div class="row">
+        <div class="row h-100">
             <div class="col-7 main">
                 <div class="detail d-flex justify-content-center align-items-center my-4">
                     <span class="row align-items-center">
@@ -36,8 +41,90 @@
                     <div class="row hourly_nav"></div>
                 </div>
             </div>
-            <div class="col-5 chart">
-
+            <div class="col-5 chart my-4 ps-5">
+                <div class="d-flex flex-column h-100 py-5 ps-2 gap-4">
+                    <div class="col-12 bg-white rounded-5 overflow-hidden flex-grow-1">
+                        <div class="w-100 h-100">
+                            <div class="info d-flex px-4 pt-3 justify-content-between">
+                                <div>
+                                    <h3 class="text-background fw-bold m-0">Temperature</h3>
+                                    <p class="text-background mb-1">Summary</p>
+                                </div>
+                                <div>
+                                    <div class="bg-background rounded-circle mt-2 d-flex justify-content-center align-items-center"
+                                        style="aspect-ratio: 1/1; width: 50px;">
+                                        <i class="fa-solid fa-temperature-empty text-white fs-3"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="container-canvas">
+                                <canvas id="temp-canvas"></canvas>
+                            </div>
+                            <div class="d-flex justify-content-center">
+                                <div class="d-flex justify-content-evenly hour_canvas">
+                                    <div class="text-background time-label0">Now</div>
+                                    <div class="text-background time-label1">6:00</div>
+                                    <div class="text-background time-label2">9:00</div>
+                                    <div class="text-background time-label3">12:00</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 bg-white rounded-5 overflow-hidden flex-grow-1">
+                        <div class="w-100 h-100">
+                            <div class="info d-flex px-4 pt-3 justify-content-between">
+                                <div>
+                                    <h3 class="text-background fw-bold m-0">Humidity</h3>
+                                    <p class="text-background mb-1">Summary</p>
+                                </div>
+                                <div>
+                                    <div class="bg-background rounded-circle mt-2 d-flex justify-content-center align-items-center"
+                                        style="aspect-ratio: 1/1; width: 50px;">
+                                        <i class="fa-solid fa-tint text-white fs-3"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="container-canvas">
+                                <canvas id="humidity-canvas"></canvas>
+                            </div>
+                            <div class="d-flex justify-content-center">
+                                <div class="d-flex justify-content-evenly hour_canvas">
+                                    <div class="text-background time-label0">Now</div>
+                                    <div class="text-background time-label1">6:00</div>
+                                    <div class="text-background time-label2">9:00</div>
+                                    <div class="text-background time-label3">12:00</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 bg-white rounded-5 overflow-hidden flex-grow-1">
+                        <div class="w-100 h-100">
+                            <div class="info d-flex px-4 pt-3 justify-content-between">
+                                <div>
+                                    <h3 class="text-background fw-bold m-0">Wind</h3>
+                                    <p class="text-background mb-1">Summary</p>
+                                </div>
+                                <div>
+                                    <div class="bg-background rounded-circle mt-2 d-flex justify-content-center align-items-center"
+                                        style="aspect-ratio: 1/1; width: 50px;">
+                                        <i class="fa-solid fa-wind text-white fs-3"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="container-canvas">
+                                <canvas id="wind-canvas"></canvas>
+                            </div>
+                            <div class="d-flex justify-content-center">
+                                <div class="d-flex justify-content-evenly hour_canvas">
+                                    <div class="text-background time-label0">Now</div>
+                                    <div class="text-background time-label1">6:00</div>
+                                    <div class="text-background time-label2">9:00</div>
+                                    <div class="text-background time-label3">12:00</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -45,6 +132,7 @@
 
     <script src="lib/font-fontawesome-ae333ffef2.js"></script>
     <script src="script.js"></script>
+    <script src="setup.js"></script>
 </body>
 
 </html>
