--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
     <script src="render.js"></script>
     <script src="resize.js"></script>
     <script src="themeSwitcher.js"></script>
+    <script src="dataProcessing.js"></script>
+    <script src="drawingCanvas.js"></script>
 </body>
 
 </html>
