Update messages for different weather conditions

--- a/index.html
+++ b/index.html
@@ -15,19 +15,10 @@
         <div class="row h-100">
             <div class="col-7 main">
                 <div class="detail d-flex justify-content-center align-items-center my-4">
-                    <span class="row align-items-center">
-                        <div class="col-6">
-                            <img src="images/sun.png" alt="" height="120px" id="weather_icon">
-                        </div>
-                        <div class="col-6">
-                            <p id="weather_main" class="text-white">Sunny</p>
-                            <p id="temperature" class="text-white">25°</p>
-                            <p id="location">HaNoi, VietNam</p>
-                        </div>
-                    </span>
+                    
                 </div>
                 <div class="message my-4">
-                    <p id="message" class="text-white">Today is a good day!</p>
+                    <p id="message" class="text-white"></p>
                 </div>
                 <div class="daily">
                     <div class="daily_nav row gx-0 bg-white rounded-4 my-4"></div>
@@ -50,6 +41,7 @@
     <script src="themeSwitcher.js"></script>
     <script src="dataProcessing.js"></script>
     <script src="drawingCanvas.js"></script>
+    <script src="dataMessage.js"></script>
 </body>
 
 </html>
