add moon image and display it during clear weather at night

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
                 <div class="rounded-pill d-flex justify-content-between" style="border: 1px solid white;">
                     <i class="fa-solid fa-location-dot text-white fs-4 p-3"></i>
-                    <input type="text" class="fs-2 text-white mx-1" id="search" style="background-color: transparent; border: 0; outline: none; width: auto; flex-grow: 1;">
+                    <input type="text" class="fs-2 text-white mx-1" id="search" style="background-color: transparent; border: 0; outline: none; width: auto; flex-grow: 1;" autocomplete="off">
                     <i class="fa-solid fa-magnifying-glass text-white fs-4 p-3" onclick="searchCity()"></i>
                 </div>
 
